Init 'Correlativas' features!